kubernetes/istio/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict-peer-authentication"
  namespace: $$MSC_NAMESPACE
spec:
  mtls:
    mode: STRICT
