kubernetes/istio/allow_nothing.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: allow-nothing
 namespace: $$MSC_NAMESPACE
spec:
 {}
